--- a/frontend/index.html
+++ b/frontend/index.html
@@ -83,6 +83,76 @@
     </div>
   </div>
 
+      <!-- ... setelah card Encrypt ... -->
+
+    <!-- FORM DECRYPT -->
+    <div class="bg-slate-800 rounded-2xl p-5 mb-6 shadow-lg border border-slate-700 mt-8">
+      <h2 class="font-semibold mb-4 text-lg">Decrypt Ciphertext</h2>
+
+      <!-- Mode -->
+      <label class="block text-sm mb-1 font-medium">Mode</label>
+      <select id="dec_mode" class="w-full mb-4 px-3 py-2 rounded-xl bg-slate-900 border border-slate-700 text-sm">
+        <option value="standard">AES Standard S-Box</option>
+        <option value="custom">Custom S-Box</option>
+      </select>
+
+      <!-- Key -->
+      <label class="block text-sm mb-1 font-medium">
+        Key (128-bit, hex 32 karakter)
+      </label>
+      <input
+        id="dec_key_hex"
+        type="text"
+        class="w-full mb-4 px-3 py-2 rounded-xl bg-slate-900 border border-slate-700 text-sm font-mono"
+        placeholder="000102030405060708090a0b0c0d0e0f"
+      />
+
+      <!-- Ciphertext -->
+      <label class="block text-sm mb-1 font-medium">Ciphertext (hex)</label>
+      <textarea
+        id="ciphertext_input"
+        rows="3"
+        class="w-full mb-4 px-3 py-2 rounded-xl bg-slate-900 border border-slate-700 text-xs font-mono"
+        placeholder="Masukkan ciphertext hex di sini..."
+      ></textarea>
+
+      <!-- Custom S-Box (opsional) -->
+      <div id="dec-sbox-wrapper" class="hidden mt-2">
+        <label class="block text-sm mb-1 font-medium">
+          Custom S-Box (256 angka 0–255, dipisah koma / spasi)
+        </label>
+        <textarea
+          id="dec_sbox_input"
+          rows="4"
+          class="w-full mb-4 px-3 py-2 rounded-xl bg-slate-900 border border-slate-700 text-xs font-mono"
+          placeholder="contoh: 99,124,119,123, ..."
+        ></textarea>
+      </div>
+
+      <!-- Tombol -->
+      <button
+        id="decrypt_btn"
+        class="px-4 py-2 rounded-xl bg-sky-500 hover:bg-sky-600 text-sm font-semibold transition"
+      >
+        Decrypt
+      </button>
+
+      <!-- Error -->
+      <p id="dec_error_msg" class="text-red-400 text-xs mt-3 hidden"></p>
+    </div>
+
+    <!-- HASIL DECRYPT -->
+    <div class="bg-slate-800 rounded-2xl p-5 shadow-lg border border-slate-700 mb-10">
+      <h2 class="font-semibold mb-3 text-lg">Hasil Plaintext</h2>
+      <textarea
+        id="plaintext_output"
+        rows="3"
+        readonly
+        class="w-full px-3 py-2 rounded-xl bg-slate-900 border border-slate-700 text-sm"
+      ></textarea>
+      <p id="dec_info_msg" class="text-xs text-slate-400 mt-2"></p>
+    </div>
+
   <script src="./main.js"></script>
 </body>
 </html>
